# XmLogger

./: README.md  build.gradle  local.properties
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/boost/: CMakeLists.txt  any.hpp  array.hpp  assert.hpp  blank.hpp  blank_fwd.hpp  concept_check.hpp  cstdint.hpp  current_function.hpp  filesystem.hpp  function_equal.hpp  function_output_iterator.hpp  get_pointer.hpp  integer.hpp  integer_fwd.hpp  integer_traits.hpp  io_fwd.hpp  is_placeholder.hpp  iterator.hpp  lexical_cast.hpp  limits.hpp  math_fwd.hpp  memory_order.hpp  next_prior.hpp  non_type.hpp  none.hpp  none_t.hpp  operators.hpp  rational.hpp  static_assert.hpp  throw_exception.hpp  token_functions.hpp  token_iterator.hpp  tokenizer.hpp  type.hpp  type_index.hpp  visit_each.hpp
app/src/main/cpp/boost/atomic/: atomic.hpp  atomic_flag.hpp  fences.hpp
app/src/main/cpp/boost/bind/: arg.hpp  bind.hpp  bind_cc.hpp  bind_mf2_cc.hpp  bind_mf_cc.hpp  bind_template.hpp  mem_fn.hpp  mem_fn_cc.hpp  mem_fn_template.hpp  mem_fn_vw.hpp  placeholders.hpp  storage.hpp
app/src/main/cpp/boost/chrono/: ceil.hpp  clock_string.hpp  config.hpp  duration.hpp  system_clocks.hpp  time_point.hpp
app/src/main/cpp/boost/concept/: assert.hpp  usage.hpp
app/src/main/cpp/boost/config/: auto_link.hpp  posix_features.hpp  select_stdlib_config.hpp  suffix.hpp  user.hpp  warning_disable.hpp
app/src/main/cpp/boost/container/: allocator_traits.hpp  container_fwd.hpp  new_allocator.hpp  scoped_allocator.hpp  scoped_allocator_fwd.hpp  throw_exception.hpp  uses_allocator.hpp  uses_allocator_fwd.hpp  vector.hpp
app/src/main/cpp/boost/context/: execution_context.hpp  execution_context_v1.hpp  execution_context_v2.hpp  execution_context_v2_void.ipp  fixedsize_stack.hpp  flags.hpp  pooled_fixedsize_stack.hpp  preallocated.hpp  stack_context.hpp  stack_traits.hpp
app/src/main/cpp/boost/core/: addressof.hpp  checked_delete.hpp  demangle.hpp  enable_if.hpp  ignore_unused.hpp  is_same.hpp  noncopyable.hpp  ref.hpp  scoped_enum.hpp  swap.hpp  typeinfo.hpp
app/src/main/cpp/boost/coroutine/: asymmetric_coroutine.hpp  attributes.hpp  exceptions.hpp  flags.hpp  stack_allocator.hpp  stack_context.hpp  stack_traits.hpp  standard_stack_allocator.hpp  symmetric_coroutine.hpp
app/src/main/cpp/boost/date_time/: adjust_functors.hpp  c_time.hpp  compiler_config.hpp  constrained_value.hpp  date.hpp  date_clock_device.hpp  date_defs.hpp  date_duration.hpp  date_duration_types.hpp  date_format_simple.hpp  date_formatting.hpp  date_formatting_limited.hpp  date_formatting_locales.hpp  date_generators.hpp  date_iterator.hpp  date_names_put.hpp  date_parsing.hpp  dst_rules.hpp  gregorian_calendar.hpp  gregorian_calendar.ipp  int_adapter.hpp  iso_format.hpp  locale_config.hpp  parse_format_base.hpp  period.hpp  special_defs.hpp  time.hpp  time_clock.hpp  time_defs.hpp  time_duration.hpp  time_iterator.hpp  time_resolution_traits.hpp  time_system_counted.hpp  time_system_split.hpp  wrapping_int.hpp  year_month_day.hpp
app/src/main/cpp/boost/detail/: basic_pointerbuf.hpp  bitmask.hpp  call_traits.hpp  container_fwd.hpp  fenv.hpp  indirect_traits.hpp  iterator.hpp  lcast_precision.hpp  reference_content.hpp  sp_typeinfo.hpp  templated_streams.hpp  utf8_codecvt_facet.hpp  utf8_codecvt_facet.ipp  workaround.hpp
app/src/main/cpp/boost/exception/: current_exception_cast.hpp  diagnostic_information.hpp  exception.hpp  get_error_info.hpp  info.hpp  to_string.hpp  to_string_stub.hpp
app/src/main/cpp/boost/filesystem/: config.hpp  convenience.hpp  fstream.hpp  operations.hpp  path.hpp  path_traits.hpp  string_file.hpp
app/src/main/cpp/boost/function/: function_base.hpp  function_fwd.hpp  function_template.hpp
app/src/main/cpp/boost/integer/: common_factor_ct.hpp  common_factor_rt.hpp  integer_log2.hpp  integer_mask.hpp  static_log2.hpp  static_min_max.hpp
app/src/main/cpp/boost/intrusive/: pointer_rebind.hpp  pointer_traits.hpp
app/src/main/cpp/boost/io/: ios_state.hpp
app/src/main/cpp/boost/iostreams/: categories.hpp  char_traits.hpp  checked_operations.hpp  close.hpp  concepts.hpp  constants.hpp  flush.hpp  imbue.hpp  input_sequence.hpp  operations_fwd.hpp  optimal_buffer_size.hpp  output_sequence.hpp  pipeline.hpp  positioning.hpp  read.hpp  seek.hpp  traits.hpp  traits_fwd.hpp  write.hpp
(+1743 files in other folders)
